--- a/Final/cp1.ipynb
+++ b/Final/cp1.ipynb
@@ -36,7 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LOADING MNIST DATASET"
+    "Loading mnist dataset"
+   
    ]
   },
   {
