--- a/Final/cp2..ipynb
+++ b/Final/cp2..ipynb
@@ -28,8 +28,8 @@
     "SEED = 1000\n",
     "BATCH_SIZE = 32\n",
     "\n",
-    "TRAIN_DIR = 'D:\\Spring 2022-23\\CVPR\\Final\\Alzheimers-ADNI/train'\n",
-    "TEST_DIR = 'D:\\Spring 2022-23\\CVPR\\Final\\Alzheimers-ADNI/test'"
+    "TRAIN_DIR = 'C:\\Spring 2022-23\\CVPR\\Final\\Alzheimers-ADNI/train'\n",
+    "TEST_DIR = 'C:\\Spring 2022-23\\CVPR\\Final\\Alzheimers-ADNI/test'"
    ]
   },
   {
